harness/fixtures/enforce-arrow-function/bad/nested-generic.ts
function quuux<T extends Record<string, unknown>>(x: T): T {
  return x;
}
